--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="title-header">
-      <h1>Crecendo Recipe app</h1>
+      <h1>Crescendo Recipe app</h1>
     </div>
 
     <div>
